--- a/Relatório II/brov_bib.bib
+++ b/Relatório II/brov_bib.bib
@@ -163,3 +163,80 @@ urldate = {2021-08-16}
 	pages={51416-51431},
 	doi={10.1109/ACCESS.2021.3068769}
 }
+
+@article{godi2021survey,
+	title={Survey on Simulators for Underwater Sensor Networks},
+	author={Godi, Geeta and others},
+	journal={Turkish Journal of Computer and Mathematics Education (TURCOMAT)},
+	volume={12},
+	number={13},
+	pages={1719--1728},
+	year={2021}
+}
+
+@article{vieira2010redes,
+	title={Redes de sensores aqu{\'a}ticas},
+	author={Vieira, L and Loureiro, A and Fernandes, Antonio and Campos, Mario},
+	journal={XXVIII Simp{\'o}sio Brasileiro de Redes de Computadores e Sistemas Distribu{\'\i}dos, Gramado, RS, Brasil},
+	volume={1},
+	pages={199--240},
+	year={2010}
+}
+
+
+@article{akyildiz2005underwater,
+title={Underwater acoustic sensor networks: research challenges},
+author={Akyildiz, Ian F and Pompili, Dario and Melodia, Tommaso},
+journal={Ad hoc networks},
+volume={3},
+number={3},
+pages={257--279},
+year={2005},
+publisher={Elsevier}
+}
+
+@misc{Wikipedia,
+	author = {Wikip{\'{e}}dia},
+	keywords = {sistema_mecatronico},
+	mendeley-groups = {Mestrado Mecatronica/Revisao bibliografica/cobertura_area},
+	mendeley-tags = {sistema_mecatronico},
+	title = {{Camada f{\'{i}}sica}},
+	url = {https://pt.wikipedia.org/wiki/Camada_f{\'{i}}sica},
+	urldate = {2021-08-18}
+}
+
+@article{shantaram2005challenges,
+	title={The Challenges of Building Scalable Mobile Underwater Wireless Sensor Networks for Aquatic Applications},
+	author={Shantaram, A and Beyenal, H and Veluchamy, R and Lewandowski, Z},
+	journal={Environ. Sci. Technol},
+	volume={39},
+	pages={5037--5042},
+	year={2005}
+}
+
+@article{das2016simulation,
+	title={Simulation tools for underwater sensor networks: a survey},
+	author={Das, Anjana P and Thampi, Sabu M},
+	journal={Network protocols and Algorithms},
+	volume={8},
+	number={4},
+	year={2016}
+}
+
+@ARTICLE{8248761,  author={Sherlock, Benjamin and Neasham, Jeffrey A. and Tsimenidis, Charalampos C.},  journal={IEEE Access},   title={Spread-Spectrum Techniques for Bio-Friendly Underwater Acoustic Communications},   year={2018},  volume={6},  number={},  pages={4506-4520},  doi={10.1109/ACCESS.2018.2790478}}
+
+@techreport{montana2008auvnetsim,
+	title={AUVNetSim: A simulator for underwater acoustics networks},
+	author={Montana, Josep Miquel Jornet},
+	year={2008},
+	institution={Massachusetts Institute of Technology. Sea Grant College Program}
+}
+
+@misc{SHERLOCK2019,
+	author = {SHERLOCK, BENJAMIN},
+	mendeley-groups = {Mestrado Mecatronica/livros e apoio estudos},
+	title = {{NM3 Acoustic Underwater Modem Python Driver, Logger, Network Simulator}},
+	url = {https://github.com/bensherlock/nm3-python-driver},
+	urldate = {2021-09-09},
+	year = {2019}
+}
