Add vehicle math modeling

--- a/brov_bib.bib
+++ b/brov_bib.bib
@@ -89,6 +89,28 @@ urldate = {2021-08-16}
 	year={2021}
 }
 
+@book{fossen2011handbook,
+	title={Handbook of marine craft hydrodynamics and motion control},
+	author={Fossen, Thor I},
+	year={2011},
+	publisher={John Wiley \& Sons}
+}
+
+@inproceedings{VervoortModelingAC,
+	title={Modeling and Control of an Unmanned Underwater Vehicle Title: Modeling and Control of an Unmanned Underwater Vehicle},
+	author={J. Vervoort and Nijmeijer and Wang}
+}
+
+@book{fossen1994guidance,
+	title={Guidance and Control of Ocean Vehicles},
+	author={Fossen, T.I.},
+	isbn={9780471941132},
+	lccn={lc94010487},
+	url={https://books.google.com.br/books?id=cwJUAAAAMAAJ},
+	year={1994},
+	publisher={Wiley}
+}
+
 @article{vieira2010redes,
 	title={Redes de sensores aqu{\'a}ticas},
 	author={Vieira, L and Loureiro, A and Fernandes, Antonio and Campos, Mario},
@@ -153,6 +175,7 @@ urldate = {2021-08-16}
 	pages={2149--2154},
 	organization={IEEE}
 }
+
 @ARTICLE{simulators-comparison,
 	author={Collins, Jack and Chand, Shelvin and Vanderkop, Anthony and Howard, David},
 	journal={IEEE Access},
@@ -160,6 +183,32 @@ urldate = {2021-08-16}
 	year={2021},
 	volume={9},
 	number={},
-	pages={51416-51431},
+	pages={51416-514131},
 	doi={10.1109/ACCESS.2021.3068769}
+}
+@article{capytaine,
+author  = {Matthieu Ancellin and Fr{\'{e}}d{\'{e}}ric Dias},
+title   = {Capytaine: a {Python-based} linear potential flow solver},
+journal = {Journal of Open Source Software},
+year    = {2019},
+month   = {apr},
+volume  = {4},
+number  = {36},
+pages   = {1341},
+doi     = {10.21105/joss.01341},
+url     = {https://doi.org/10.21105%2Fjoss.01341}
+}
+
+@inproceedings{rov_modeling_1,
+	title={Modeling and Control of an Unmanned Underwater Vehicle Title: Modeling and Control of an Unmanned Underwater Vehicle},
+	author={J. Vervoort and Nijmeijer and Wang}
+}
+
+@article{thruster_allocation,
+	title={OPTIMIZATION OF THRUST ALLOCATION IN THE PROPULSION SYSTEM OF AN UNDERWATER VEHICLE},
+	author={J. Garus},
+	journal={International Journal of Applied Mathematics and Computer Science},
+	year={2004},
+	volume={14},
+	pages={461-467}
 }
