--- a/preambulo.tex
+++ b/preambulo.tex
@@ -1,10 +1,11 @@
 \documentclass[12pt]{article}
 \usepackage{indentfirst}
 \usepackage[portuguese]{babel}
+\usepackage{float}
 \usepackage{natbib}
 \usepackage{url}
 \usepackage[utf8x]{inputenc}
-\usepackage{amsmath}
+\usepackage{amsmath,tabu}
 \usepackage{graphicx}
 \graphicspath{{images/}}
 \usepackage{parskip}
