--- a/Relatório II/preambulo.tex
+++ b/Relatório II/preambulo.tex
@@ -13,6 +13,7 @@
 \usepackage{setspace}
 \usepackage{hyperref}
 \usepackage{enumitem}
+\usepackage{float}
 \setmarginsrb{3 cm}{2.5 cm}{3 cm}{2.5 cm}{1 cm}{1.5 cm}{1 cm}{1.5 cm}
 \numberwithin{figure}{section}
 \numberwithin{table}{section}
