--- a/Relatório II/main.tex
+++ b/Relatório II/main.tex
@@ -18,7 +18,7 @@
 \include{cap1-detalhamento-design}
 \include{cap2-modelagem-matematica}
 \include{cap3-arquitetura-software}
-\include{cap4-diagrama-eletrico}
+\include{cap4-diagrama-componentes}
 \include{cap5-simulacao-rede-comunicacao-subaquatica}
 
 \newpage
