Fix bib and images inclusion

--- a/Relatório II/brov_bib.bib
+++ b/Relatório II/brov_bib.bib
@@ -442,6 +442,17 @@ publisher={Elsevier}
 	author={J. Vervoort and Nijmeijer and Wang}
 }
 
+@INPROCEEDINGS{rov_modeling_2,
+	author={Yang, R. and Clement, B. and Mansour, A. and Li, H. J. and Li, M. and Wu, N. L.},
+	booktitle={2014 IEEE International Conference on Autonomous Robot Systems and Competitions (ICARSC)}, 
+	title={Modeling of a complex-shaped underwater vehicle}, 
+	year={2014},
+	volume={},
+	number={},
+	pages={36-41},
+	doi={10.1109/ICARSC.2014.6849759}
+}
+
 @article{thruster_allocation,
 	title={OPTIMIZATION OF THRUST ALLOCATION IN THE PROPULSION SYSTEM OF AN UNDERWATER VEHICLE},
 	author={J. Garus},
