--- a/Relatório II/cap2-modelagem-matematica.tex
+++ b/Relatório II/cap2-modelagem-matematica.tex
@@ -89,7 +89,7 @@ Os parâmetros da matriz de inércia do corpo rígido são definidos na Tabela  
 
 \begin{table}[H]
 	\centering
-	\label{tab:inertia_matrix}
+	\label{tab:inertia_matrix_params}
 	\caption{Tabela de valores dos parâmetros da Equação \ref{eqn:inertia_matrix}}
 	$\begin{array}{c c c}
 		\begin{matrix} 
