--- a/Relatório II/preambulo.tex
+++ b/Relatório II/preambulo.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage{indentfirst}
+\usepackage[T1]{fontenc}
 \usepackage[portuguese]{babel}
 \usepackage{natbib}
 \usepackage{url}
