--- a/relatorio-iii/main.tex
+++ b/relatorio-iii/main.tex
@@ -15,11 +15,10 @@
 \setlength{\parindent}{20pt} % recuo parágrafo
 \setlength{\parskip}{0em} % espaçamamento entre parágrafos
 
-%\include{cap1-detalhamento-design}
-%\include{cap2-modelagem-matematica}
-%\include{cap3-arquitetura-software}
-%\include{cap4-diagrama-componentes}
-%\include{cap5-simulacao-rede-comunicacao-subaquatica}
+\include{cap1-introducao}
+\include{cap2-modelo2simulacao}
+\include{cap3-simulacao}
+\include{cap4-conclusao}
 
 \newpage
 
