add Rafael's part

--- a/relatorio-iii/cap1-introducao.tex
+++ b/relatorio-iii/cap1-introducao.tex
@@ -1,1 +1,4 @@
 \section{Introdução}
+
+Esse relatório abrange o design dos componentes remanescentes para criação do cenário de simulação, os resultados das simulações feitas, e os avanços obtidos no desenvolvimento do protocolo de comunicação subaquática.
+
