--- a/relatorio-iii/main.tex
+++ b/relatorio-iii/main.tex
@@ -15,7 +15,7 @@
 \setlength{\parindent}{20pt} % recuo parágrafo
 \setlength{\parskip}{0em} % espaçamamento entre parágrafos
 
-\include{cap1-introducao}
+%\include{cap1-introducao}
 \include{cap2-modelo2simulacao}
 \include{cap3-simulacao}
 \include{cap4-conclusao}
