change Rafael's part

--- a/relatorio-iii/cap2-modelo2simulacao.tex
+++ b/relatorio-iii/cap2-modelo2simulacao.tex
@@ -32,7 +32,9 @@ O sistema escolhido para a localização foi o SBL (do inglês \textit{short bas
 	\footnotesize Fonte: Autores
 \end{figure}
 
-A etapa subsequente foi exportar os dados de CAD, no formato .sldprt e .sldasm, para .stl e .dae, que são formatos aceitos pelo Ignition (software utilizado para simulação). A Figura \ref{fig:software-flow} resume o fluxo de softwares utilizados. Como o Solidworks -- utilizado para modelagem 3D -- não fornece opção para exportar arquivos de .sldprt e .sldasm diretamente para .dae, optou-se por utilizar o Onshape e o Blender como softwares intermediários para geração desse tipo de arquivo e eventuais correções de escala e posicionamento do centro global de coordenadas.
+A etapa subsequente foi exportar os dados de CAD, no formato .sldprt e .sldasm, para .stl e .dae, que são formatos aceitos pelo Ignition (software utilizado para simulação). Esses tipos arquivos aceitos pelo Ignition representam descrição de malha, que é a representação da superfície de um objeto 3D apenas com poligonos simples. A diferença entre os formatos .stl e .dae aceitos é que o primeiro não armazena informação de cor dos polígonos, diferentemente do segundo, que também consta com propriedades de reflexão, normais e textura da malha, que o torna mais pesado e custoso de ser processado do que o .stl. O Ignition trabalha com malhas para duas funcionalidades, aplicação da física e visualização. Dessa forma, se optou pela utilização do arquivo mais leve .stl para a simulação da física e a utilização do .dae com cores e texturas para a visualização. Ademais, se redesenenhou o veículo para a geração da malha .stl, visto que a compexidade de sua superfície demandava processamento que tornava a aplicação lenta nos computadores disponíveis para o projeto.
+
+ A Figura \ref{fig:software-flow} resume o fluxo de softwares utilizados para o processo de conversão de CAD em malha. Como o Solidworks -- utilizado para modelagem 3D -- não fornece opção para exportar arquivos de .sldprt e .sldasm diretamente para .dae, optou-se por utilizar o Onshape e o Blender como softwares intermediários para geração desse tipo de arquivo e eventuais correções de escala e posicionamento do centro global de coordenadas.
 
 \begin{figure}[h]
 	\centering
