--- a/relatorio-iii/main.tex
+++ b/relatorio-iii/main.tex
@@ -18,7 +18,7 @@
 %\include{cap1-introducao}
 \include{cap2-modelo2simulacao}
 \include{cap3-simulacao}
-\include{cap4-conclusao}
+\include{cap4-protocolo}
 
 \newpage
 
